fix alignement navbar on large screen

--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -46,10 +46,9 @@ z-index: 10;
 @media only screen and (min-width: 1200px) {
     .navigationContainer {
         justify-content: center;
-        padding: 0rem 5rem 0rem 5rem
     }
     .navigationInside {
         width: 80%;
-        margin-right: 0rem;
+        margin-right: 10rem;
 } ;
    }
